[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "word-game-server"
version = "0.1.0"
description = "Minimal multiplayer game server using FastAPI, WebSockets, and DynamoDB"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "websockets==12.0",
    "boto3==1.34.0",
    "pydantic==2.5.0",
]
